test/1.2/errors/T_EFMTARGN.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method init {
    /// ERROR EFMTARGN
    log "info": "%d %d", 1;
    /// ERROR EFMTARGN
    log "info": "%d %d", 1, 2, 3;
}
